--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "app",
   "version": "0.0.1",
   engines: {
-    "node": "~0.6.6"
+    "node": "~0.6.6",
     "npm" : "~1.0.106"
   },
   "dependencies": { 
