--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jqueryify": "~0.0.1",
     "spine": "~1.0.5",
     "jade" : "~0.16.2", 
-    "express" : "~2.5.8"
+    "express" : "~2.5.8" , 
+    "coffee-script" : "~1.1.3"
     }
 }
