--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
     "npm" : "~1.0.106"
   },
   "dependencies": { 
-    "serveup": "~0.0.2",
-    "hem": "0.1.6",
-    "es5-shimify": "~0.0.1",
-    "json2ify": "~0.0.1",
-    "jqueryify": "~0.0.1",
-    "spine": "~1.0.5",
-    "jade" : "~0.16.2", 
-    "express" : "~2.5.8" , 
-    "coffee-script" : "~1.1.3"
+    "serveup"       : "~0.0.2",
+    "hem"           : "0.1.6",
+    "es5-shimify"   : "~0.0.1",
+    "json2ify"      : "~0.0.1",
+    "jqueryify"     : "~0.0.1",
+    "spine"         : "~1.0.5",
+    "jade"          : "~0.16.2", 
+    "express"       : "~2.5.8" , 
+    "coffee-script" : "~1.1.3",
+    "faye"          : "~0.8.1"
     }
 }
