--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jade"          : "~0.16.2", 
     "express"       : "~2.5.8" , 
     "coffee-script" : "~1.1.3",
-    "faye"          : "~0.8.1"
+    "faye"          : "~0.8.1",
+    "OPF"           : "0.0.3"
     }
 }
