--- a/package.json
+++ b/package.json
@@ -16,6 +16,6 @@
     "express"       : "~2.5.8" , 
     "coffee-script" : "~1.1.3",
     "faye"          : "~0.8.1",
-    "OPF"           : "0.0.3"
+    "opf"           : "0.0.4"
     }
 }
