--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express"       : "~2.5.8" , 
     "coffee-script" : "~1.1.3",
     "faye"          : "~0.8.1",
-    "opf"           : "0.0.4"
+    "opf"           : "0.0.4",
+    "socket.io"     : "~0.9.6"
     }
 }
