--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
     "coffee-script" : "~1.1.3",
     "faye"          : "~0.8.1",
     "opf"           : "0.0.4",
-    "socket.io"     : "~0.9.6"
+    "node-pusher"   : "0.0.2"
     }
 }
