--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "coffee-script" : "~1.1.3",
     "faye"          : "~0.8.1",
     "opf"           : "0.0.5",
+    "less"          : "~1.3.0",
     "node-pusher"   : "0.0.2"
     }
 }
