changes to loading

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "es5-shimify"   : "~0.0.1",
     "json2ify"      : "~0.0.1",
     "jqueryify"     : "~0.0.1",
-    "spine"         : "~1.0.5",
+    "spine"         : "1.0.5",
     "jade"          : "~0.16.2", 
     "express"       : "~2.5.8" , 
     "coffee-script" : "~1.1.3",
