--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "node-pusher"   :  "0.0.2"  ,
     "kaiseki"       :  "0.3.0"  ,
     "restler"       :  "~2.0.0" , 
-    "async"         :  "0.1.22" 
+    "async"         :  "0.1.22" ,
+    "node-pusher"   :  "0.0.2"  ,
+    "twilio"        :  "0.4.0"
   }
 }
