--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "restler"       :  "~2.0.0" , 
     "async"         :  "0.1.22" ,
     "node-pusher"   :  "0.0.2"  ,
-    "twilio"        :  "0.4.0"
+    "twilio"        :  "0.4.0",
+    "parse"         : "*"
   }
 }
