--- a/.env-sand
+++ b/.env-sand
@@ -6,8 +6,8 @@ FORCE_DOT_COM_CLIENT_SECRET=5707111752061022209
 FORCE_DOT_COM_HOSTNAME=https://test.salesforce.com
 BASE_URL=http://localhost:9293
 
-PUSHER_APP_ID=19860
-PUSHER_KEY=c4f63687f1700952a77f
+PUSHER_APP_ID=
+PUSHER_KEY=
 PUSHER_SECRET=cec3883fd2375877824d
 PUSHER_AUTH_URL=http://rodcoerp-s.herokuapp.com/pusherAuth
 
