--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "async"         :  "0.1.22" ,
     "node-pusher"   :  "0.0.2"  ,
     "twilio"        :  "0.4.0" , 
-    "mixpanel"      :  "*",
-    "newrelic"      : "latest"
+    "mixpanel"      :  "*"
   }
 }
