--- a/package.json
+++ b/package.json
@@ -3,26 +3,26 @@
   "version": "0.0.1",
   "engines": {
     "node": "~0.8.12",
-    "npm" : "~1.1.63"
+    "npm": "~1.1.63"
   },
-  "dependencies": { 
-    "serveup"       :  "~0.0.2" ,
-    "hem"           :  "0.1.6"  ,
-    "es5-shimify"   :  "~0.0.1" ,
-    "json2ify"      :  "~0.0.1" ,
-    "jqueryify"     :  "~0.0.1" ,
-    "spine"         :  "1.0.5"  ,
-    "jade"          :  "~0.16.2", 
-    "express"       :  "~2.5.8" , 
-    "coffee-script" :  "1.3.3"  ,
-    "faye"          :  "~0.8.1" ,
-    "opf"           :  "0.0.5"  ,
-    "less"          :  "~1.3.0" ,
-    "node-pusher"   :  "0.0.2"  ,
-    "restler"       :  "~2.0.0" , 
-    "async"         :  "0.1.22" ,
-    "node-pusher"   :  "0.0.2"  ,
-    "twilio"        :  "0.4.0" , 
-    "mixpanel"      :  "*"
+  "dependencies": {
+    "serveup": "~0.0.2",
+    "hem": "0.1.6",
+    "es5-shimify": "~0.0.1",
+    "json2ify": "~0.0.1",
+    "jqueryify": "~0.0.1",
+    "spine": "1.0.5",
+    "jade": "~0.16.2",
+    "express": "~2.5.8",
+    "coffee-script": "1.3.3",
+    "faye": "~0.8.1",
+    "opf": "0.0.5",
+    "less": "~1.3.0",
+    "node-pusher": "0.0.2",
+    "restler": "~2.0.0",
+    "async": "0.1.22",
+    "twilio": "0.4.0",
+    "mixpanel": "*",
+    "mailgun-js": "~0.6.7"
   }
 }
